# DFedNexus

./: LICENSE  README.md  requirements.txt
experiments/: run_experiment.py
experiments/configs/: a_dflaa_cifar10_0loss.yaml  a_dflaa_cifar10_10loss.yaml  a_dflaa_cifar10_10loss_0p5alpha.yaml  a_dflaa_cifar10_10loss_1p0alpha.yaml  a_dflaa_cifar10_10loss_hetchannel.yaml  a_dflaa_cifar10_10loss_resnet.yaml  a_dflaa_cifar10_20loss.yaml  a_dflaa_cifar10_30loss.yaml  a_dflaa_cifar10_50loss.yaml  a_dflaa_cifar10_nodes40_10loss.yaml  a_dflaa_cifar10_nodes80_10loss.yaml  a_dflaa_cifar10_topogrid_10loss.yaml  a_dflaa_cifar10_toporing_10loss.yaml  a_dflaa_emnist_0loss.yaml  a_dflaa_emnist_10loss.yaml  a_dflaa_emnist_20loss.yaml  a_dflaa_emnist_30loss.yaml  a_dflaa_emnist_50loss.yaml  a_dflaa_emnist_beta01_20loss.yaml  a_dflaa_emnist_beta02_20loss.yaml  a_dflaa_emnist_beta05_20loss.yaml  a_dflaa_emnist_beta10_20loss.yaml  a_dflaa_emnist_beta20_20loss.yaml  a_dflaa_emnist_beta30_20loss.yaml  a_dflaa_emnist_nodes40_10loss.yaml  a_dflaa_emnist_nodes80_10loss.yaml  a_dflaa_emnist_stalehigh_10loss.yaml  a_dflaa_emnist_stalemid_10loss.yaml  a_dflaa_emnist_tau10_10loss.yaml  a_dflaa_emnist_tau15_10loss.yaml  a_dflaa_emnist_tau1_10loss.yaml  a_dflaa_emnist_tau20_10loss.yaml  a_dflaa_emnist_tau2_10loss.yaml  a_dflaa_emnist_tau3_10loss.yaml  a_dflaa_emnist_topogrid_10loss.yaml  (+1 more)
src/: pyproject.toml  setup.py
src/dfednexus/: __init__.py  aggregators.py  bandwidth.py  communication.py  data.py  metrics.py  models.py  node.py  paper_exp_plots.py  plotting.py  simulation.py  topology.py
