[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfednexus"
version = "1.0.0"
description = "DFedNexus: Reliable Decentralised Federated Learning for Wireless Edge Networks"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dfednexus*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"